# yoauditor

./: .dockerignore  .gitignore  .yoauditor.toml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  llama3.2.yoaudit_report.md  qwen3-coder.yoaudit_report.md
docs/: CLI.md  CONFIGURATION.md  DESIGN.md  DEVELOPMENT.md  DOCKER.md  EXIT_CODES.md  MODES.md
fixtures/: AUDIT_RESULTS.md  EXPECTED_ISSUES.md  README.md  api.js  auth.py  clean_example.py  db.js  main.go  performance.py  utils.rs
fixtures/lib/: helper.js
src/: cli.rs  config.rs  main.rs  models.rs
src/agent/: agent_loop.rs  mod.rs  tools.rs
src/analysis/: aggregator.rs  mod.rs
src/repo/: cloner.rs  mod.rs
src/report/: generator.rs  mod.rs
src/scanner/: mod.rs
