[package]
name = "yoauditor"
version = "1.0.0"
edition = "2021"
authors = ["YoAuditor Team"]
description = "LLM-powered code auditor for GitHub repos"
readme = "README.md"
license = "MIT"
keywords = ["code-review", "audit", "llm", "ollama", "rig"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI Argument Parsing
clap = { version = "4", features = ["derive", "env"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Git Operations
git2 = "0.19"

# File System Traversal
walkdir = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration File Parsing
toml = "0.8"

# HTTP Client (backup for Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# Progress Indicators
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Temporary Directories
tempfile = "3"

# Async Utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "yoauditor"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
